...
    <string name="day">Good day</string>
    <string name="night">Good night</string>
    <string name="morning">Good morning</string>
    <string name="evening">Good evening</string>
    <string name="stays_login_message">Please, Log in!</string>
    <string name="current_lang" translatable="false">%1$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="change_language">Change language</string>
    <string name="change_language_info">App will be restarted, to apply changes.\n\nPlease, note, that some translations might be incorrect.</string>
    <string name="added">Added</string>
    <string name="removed">Removed</string>
    <string name="logout_info">Do you really want to log out?</string>
...
    <string name="enable">Enable</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="server_error">493 error occurred on the servers</string>
    <string name="server_error_message">The error occurred on servers. \nPlease, try again later.</string>
    <string name="no_photo_selected">No photo selected</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="change">Change</string>
</resources>
